--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -29,13 +29,13 @@
 	
 	\bibitem{bigul} Hsiang-Shang Ko, Tao Zan, and Zhenjiang Hu, {\em BiGUL: A formally verified core language for putback-based bidirectional programming.} In Partial Evaluation and Program Manipulation, PEPM'16, pages 61-72, ACM, 2016.
 	
-	\bibitem{bigul-tutorial} Zhenjiang Hu and Hsiang-Shang Ko,  {\em Principle and Practice of Bidirectional Programming in BiGUL}, Tutorial [Online]. Available: http://www.prg.nii.ac.jp/project/bigul/tutorial.pdf
+	\bibitem{bigul-tutorial} Z. Hu and H.-Shang Ko,  {\em Principle and Practice of Bidirectional Programming in BiGUL}, Tutorial [Online]. Available: http://www.prg.nii.ac.jp/project/bigul/tutorial.pdf
 	
 	\bibitem{biyacc} {\em BiYacc, tool designed to ease the work of writing parsers and printers}, [Online]. Available: http://biyacc.yozora.moe/
 	
 	\bibitem{share} {\em SHARE - Sharing Hosted Autonomous Research Environments}, [Online]. Available: http://is.ieis.tue.nl/staff/pvgorp/share/
 	
-	\bibitem{wiki-transformation} {\em Wikipedia. "Model transformation."} Retrieved March, 2017, from https://en.wikipedia.org/wiki/Model{\_}transformation.
+	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on BX, 2013.
 	
 	\bibitem{semethods} S. Easterbrook, J. Singer, M.-A. Storey, \& D. Damian. {\em Selecting Empirical Methods for Software Engineering Research. Guide to Advanced Empirical Software Engineering}, 285-311, 2008. Retrieved from http://doi.org/10.1007/978-1-84800-044-5\_11
 	
@@ -53,7 +53,7 @@
 	
 	\bibitem{mdd-webwithmvc} D. Distante, P. Pedone, G. Rossi and G. Canfora, { \em Model-driven development of Web applications with UWA, MVC and JavaServer faces}, Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics) 4607, pages 457-472, 2007.
 	
-	\bibitem{designpattern-headfirst} E. Freeman, E. Robson, K. Sierra and B. Bates, { \em Head First Design Patterns}, O'Reilly, USA, Pages 536-566, 2004.
+	\bibitem{designpattern-headfirst} E. Freeman, E. Robson, K. Sierra and B. Bates, { \em Head First Design Patterns}, O'Reilly, USA, pages 536-566, 2004.
 	
 	\bibitem{canvas} {\em MDN, "Canvas API",} Retrieved May, 2017, from https://developer.mozilla.org/en-US/docs/Web/API/Canvas\_API.
 	
@@ -68,6 +68,10 @@
 	\bibitem{designinterfaces} J. Tidwell, {\em Designing interfaces}, O'Reilly, vol. XXXIII, Pages 81-87, 2012.
 	
 	\bibitem{scenariobasedui} K. Kusano, M. Nakatani and T. Ohno, {\em Scenario-based interactive UI design}, Proceedings of the SIGCHI Conference on Human Factors in Computing Systems - CHI '13, 391,  2013.
+	
+	\bibitem{servlet} J. Hunter and W. Crawford, {\em Java servlet programming}, vol. 37, 2001.
+	
+	\bibitem{funcandnonfuncreq} P. Sharma and S. Dhir, {\em Functional \& non-functional requirement elicitation and risk assessment for agile processes}. International Journal of Control Theory and Applications, vol. 9, pages 9005-9010, 2016.
 	
 \end{thebibliography}
 
