--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -82,8 +82,9 @@
 
 \newcommand{\p}[1]{\texttt{\small #1}}
 
-\theoremstyle{break}
-\newtheorem{ex}{Example}[section] 
+\theoremstyle{definition}
+\newtheorem{defn}{Definition} 
+\newtheorem{ex}{Example} 
 
 \definecolor{gray}{gray}{0.95}
 \definecolor{darkgreen}{RGB}{0,127,0}
