--- a/Final Documentation/Implementation/Implementation.tex
+++ b/Final Documentation/Implementation/Implementation.tex
@@ -1,4 +1,7 @@
 \section{Implementation}\label{sec:implementation}
+\subsection{Model, View and Controller}\label{subsec:MVC}
+controller and helper - how servlet is implemented with actual class name and func.
+\paragraph{Transformation Rules}
 
 \subsection{UML Diagrams}\label{subsec:umldiagrams}
 \subsubsection{Component Diagram}\label{subsubsec:component}
