--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -1,9 +1,10 @@
 \section{Requirements}\label{sec:requirements}
 This chapter explains all the requirements needed to implement a successful demonstrator. Section \ref{subsec:functionalreq} describes all the functional requirements. Afterwards, Section \ref{subsec:nonfunctionalreq} deals with all the non-functional requirements followled by Section \ref{subsec:choicesthreats}, which describes some of the choices that I made during research and  implementation work and its associated threats. 
 
-To avoid failure and for the smooth functioning of any project, the basic and foremost need is requirement. Generally requirements are of two types: functional and non-functional. 
+To avoid failure and for the smooth functioning of any project, the basic and foremost need of any project is requirement. Generally requirements are of two types: functional and non-functional. 
+
 \subsection{Functional}\label{subsec:functionalreq}
-Functional requirements define the behaviours of a system or in simple terms what a system should do. Hence it describes all the behavioural attributes of a system.
+Functional requirements define the behaviours of a system or in simple terms what a system should do. Hence it describes all the behavioural attributes of a system \cite{funcandnonfuncreq}.
 \newline\newline As my thesis is more focussed on the implementation of a demonstrator for consistency management based on a bx tool, following are some of the functional end results (referred to as \textbf{FREQ} from now on) I am trying to achieve:
 
 \textbf{\textit{FREQ1}}: Reduce the installation time of the bx tool\\
@@ -18,13 +19,13 @@ During the entire time while the user is using the demonstrator, it should be ab
 Rather being just a online playing tool, the user should learn certain concepts of bx by using the demonstrator. User should be able to relate to the concepts taught by the demonstrator with its scenarios.
 
 \subsection{Non-Functional}\label{subsec:nonfunctionalreq}
-Non-functional requirements cover all the remaining requirements which are not covered by the functional requirements. Hence it describes all the quality attributes of a system.
+Non-functional requirements cover all the remaining requirements which are not covered by the functional requirements. Hence it describes all the quality attributes of a system \cite{funcandnonfuncreq}.
 \newline\newline Following are some of the non-functional end results (referred to as \textbf{NREQ} from now on) I am trying to achieve:
 
 \textbf{\textit{NREQ1}}: Public access\\
-The demonstrator should be accessible world-wide to all. Being a web-application, it should be deployed on a web-server and accessible to the public through its url.\\\\ 
+The demonstrator should be accessible world-wide to all. Being a demonstrator for a bx tool, it's accessibility shouldn't be restricted for a few groups. rather, it should be accessible to all whoever wants to use the tool.\\\\ 
 \textbf{\textit{NREQ2}}: Platform independent\\ 
-Application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect application.\\\\
+Application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect the application.\\\\
 \textbf{\textit{NREQ3}}: Robost\\
 Application architecture should be easily maintainable and extendable. With changing requirements and needs, application architecture should be able to accomodate new changes and future enhancements.\\\\
 \textbf{\textit{NREQ4}}: Easily deployable project\\
@@ -40,14 +41,3 @@ The implementation process and the final prototype was driven by many choices an
 	\item {my decisions on designing the application's framework for implementation are impacted by the existing availability and usability issues of the finalized bx-tool.}
 	\item {During evaluation, I might not have got proper feedback from my friends \& colleagues due to my acquaintance and time constraints.}
 \end{itemize}
-
-
-
-
-
-
-
-
-
-
-
